--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "deploy": "nuxt generate && firebase deploy"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.0",
     "nuxt": "^2.0.0",
-    "@nuxtjs/dotenv": "^1.4.0"
+    "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
