--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "nuxt generate && firebase deploy"
   },
   "dependencies": {
+    "@luxdamore/vue-cursor-fx": "^1.4.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "nuxt": "^2.0.0",
     "vue-typed-js": "^0.1.2"
