--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@luxdamore/vue-cursor-fx": "^1.4.0",
+    "@neneos/nuxt-animate.css": "^0.0.1",
     "@nuxtjs/dotenv": "^1.4.0",
     "nuxt": "^2.0.0",
     "vue-typed-js": "^0.1.2"
