--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "aos": "^2.3.4",
     "nuxt": "^2.0.0",
+    "vue-pdf": "^4.0.8",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
