--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "prod": "nuxt build && nuxt start",
-    "update": "git add . && git commit -m 'update' && git push",
+    "save": "git add . && git commit -m 'update' && git push",
     "deploy": "nuxt generate && firebase deploy"
   },
   "dependencies": {
     "@luxdamore/vue-cursor-fx": "^1.4.0",
     "@neneos/nuxt-animate.css": "^0.0.1",
+    "@nuxtjs/axios": "^5.10.1",
     "@nuxtjs/dotenv": "^1.4.0",
     "aos": "^2.3.4",
     "nuxt": "^2.0.0",
